# cyclist-comparison

./: .gitignore  LICENSE  README.md  cyclist-comparison.cabal  exec.sh  insertResults.py  stack.yaml  tables.sql
src/: .Main.hs.swp  .QueryProcessor.hs.swp  GShow.hs  Main.hs  QueryProcessor.hs  ToString.hs
src/front/: index.html  launch-ui.sh  main.css  menu.js  package.json  webpack.config.js
src/front/src/: index.js
src/front/src/components/: comparison.js  form.js  menu.js  portfolio.js  results.js  source.js  tile.js  ui.js
src/front/src/components/DevCards/: kaysin.js  shavkunov.js
