name:                cyclist-comparison
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/demarkok/cyclist-comparison#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Kaysin
maintainer:          demarkok@gmail.com
copyright:           2017 Ilya Kaysin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cyclist-comparison
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       scotty,
                       postgresql-simple,
                       text,
                       network,
                       wai-middleware-static,
                       bytestring
                       --hledger-lib
